Fix CSS, title, readme
CSS fixed:
box-sizing: border-box; //removed cards overlapping
-moz-backface-visibility: hidden; //fix mobile firefox show front cover

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,8 @@ img{
   position: absolute;
   border: 1px solid #49494b;
   border-radius: 5px;
+  box-sizing: border-box; /* TO NOT OVERLAP */
+  -moz-backface-visibility: hidden; /* FIX MOBILE FIREFOX */
 }
 
 .card {
